PIVOT-1039: * Correct style errors from the previous change to VersionTest.java * Fix (some) errors in the Javadoc process with Java 10 * Fix some of the errors in "package.html" files also found by Java 10
git-svn-id: https://svn.apache.org/repos/asf/pivot/trunk@1837548 13f79535-47bb-0310-9956-ffa450edef68